dev_cluster_alpha_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ingress-dev"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-08ac41992054ea9e0, subnet-0518db661b89e9458, subnet-0c5e2e7471fa96906, subnet-0c5e2e7471fa96906
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:087395885892:certificate/8bf20c8a-c0f2-48f0-a389-6c8690fd2183
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  labels:
    app: demoapp
spec:
  rules:
  - http:
      paths:
        - path: /*
          backend:
            serviceName: ssl-redirect
            servicePort: use-annotation
  - host: cms-qa.xcijv.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: cms-spring-boot
          servicePort: 8009
  - host: asset-qa.xcijv.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: static-asset-api-spring-boot
          servicePort: 8008
  - host: sp-qa.xcijv.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: sp-api-spring-boot
          servicePort: 8777
