ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "ingress-dev"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:087395885892:certificate/8bf20c8a-c0f2-48f0-a389-6c8690fd2183
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  labels:
    app: demoapp
spec:
  rules:
  - host: cms-test.xcijv.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: cms-spring-boot
          servicePort: 8009
  - host: asset-test.xcijv.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: static-asset-api-spring-boot
          servicePort: 8008
  - host: sp-test.xcijv.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: sp-api-spring-boot
          servicePort: 8777
